Bug 252797 - The list boxes are not anchored to the bottom of the window
Summary: The list boxes are not anchored to the bottom of the window
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_joystick (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-29 21:44 UTC by Zenith88
Modified: 2010-10-06 12:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Zenith88 2010-09-29 21:44:12 UTC
Version:           unspecified (using KDE 4.4.5) 
OS:                Linux

With the modern multi-button joysticks it is hard to see which buttons are pressed and which axes are moved with those small list boxes.

Please anchor the list boxes to the bottom of the window and make them to occupy all available space.

Reproducible: Always

Steps to Reproduce:
open joystick control, grab the window by the bottom and resize downward.

Actual Results:  
List boxes expand at 1/2 the rate of the window.

Expected Results:  
Should expand with the window.
Comment 1 Christoph Feck 2010-09-29 23:34:32 UTC
SVN commit 1181041 by cfeck:

Make lists stretchable

BUG: 252797
FIXED-IN: 4.6.0


 M  +3 -3      joywidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1181041
Comment 2 Zenith88 2010-09-30 16:41:51 UTC
Even 4.5.0 has not made its way into the major distros.
Please consider issuing updates instead.
Comment 3 Christoph Feck 2010-10-06 12:33:39 UTC
Please do not change the bug status.