Make lists stretchable

BUG: 252797
FIXED-IN: 4.6.0

svn path=/trunk/KDE/kdebase/workspace/; revision=1181041